<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/horizontal_margin"
    android:layout_marginRight="@dimen/horizontal_margin"
    android:layout_marginTop="@dimen/vertical_margin"
    android:layout_marginBottom="@dimen/vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/city_image_width"
            android:layout_height="@dimen/city_image_height"
            android:src="@drawable/stockholm_sweden"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/horizontal_margin">
            <TextView
                android:id="@+id/country_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_label"
                android:background="@color/sweden_yellow_color"
                android:padding="@dimen/card_view_margin"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/country_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_name"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/language_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_label"
                android:layout_marginTop="@dimen/vertical_margin"
                android:background="@color/sweden_yellow_color"
                android:padding="@dimen/card_view_margin"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/airport_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/airport_label"
                android:layout_marginTop="@dimen/vertical_margin"
                android:background="@color/sweden_yellow_color"
                android:padding="@dimen/card_view_margin"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/airport_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/airport_name"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/transportation_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transportation_label"
                android:layout_marginTop="@dimen/vertical_margin"
                android:background="@color/sweden_yellow_color"
                android:padding="@dimen/card_view_margin"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/transports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transports"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/overview_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview_label"
        android:background="@color/sweden_yellow_color"
        android:padding="@dimen/card_view_margin"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:background="@color/bg_gray" />
</LinearLayout>
</ScrollView>